--- a/app/src/main/res/layout/ny_patient_frag.xml
+++ b/app/src/main/res/layout/ny_patient_frag.xml
@@ -65,7 +65,7 @@
         android:layout_marginStart="8dp"
         android:text="Start måling nu"
         android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toTopOf="@+id/opret_P"
         app:layout_constraintStart_toStartOf="@+id/editText3"
         app:layout_constraintTop_toBottomOf="@+id/editText3" />
 
@@ -99,7 +99,7 @@
         app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/opret_P"
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginBottom="67dp"
