--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -197,9 +197,10 @@
         android:layout_height="82dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:src="@drawable/baseline_sentiment_very_satisfied_black_48"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actionbar_image"
-        app:srcCompat="@drawable/baseline_sentiment_very_satisfied_black_48" />
+        />
 
     <TextView
         android:id="@+id/facetoday_text"
