--- a/app/src/main/res/layout/activity_terapeut_activity.xml
+++ b/app/src/main/res/layout/activity_terapeut_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Terapeut_activity">
+    tools:context=".views.Terapeut_activity">
 
     <FrameLayout
         android:id="@+id/fragmentindhold"
