--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -191,42 +191,20 @@
         app:layout_constraintStart_toStartOf="@+id/circlebar"
         app:layout_constraintTop_toTopOf="@+id/circlebar" />
 
-    <ImageView
-        android:id="@+id/facetoday_image"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/baseline_sentiment_very_satisfied_black_48"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/actionbar_image" />
-
-    <TextView
-        android:id="@+id/facetoday_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:text="I dag"
-        app:layout_constraintEnd_toEndOf="@+id/facetoday_image"
-        app:layout_constraintStart_toStartOf="@+id/facetoday_image"
-        app:layout_constraintTop_toBottomOf="@+id/facetoday_image" />
-
     <HorizontalScrollView
-        android:layout_width="271dp"
-        android:layout_height="81dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="368dp"
+        android:layout_height="116dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/facetoday_image"
-        app:layout_constraintTop_toBottomOf="@+id/actionbar_image">
+        android:scrollbars="none"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
+            android:id="@+id/dates"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" />
     </HorizontalScrollView>
 
 
