--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -1,12 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/eggwhite">
 
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="75dp"
+        android:layout_height="88dp"
+        android:backgroundTint="@color/colorBlack"
+        android:layout_marginTop="60dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/facetoday_image"
+            android:layout_width="63dp"
+            android:layout_height="66dp"
+            android:src="@drawable/baseline_sentiment_very_satisfied_black_48"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp" />
+
+        <TextView
+            android:id="@+id/facetoday_text"
+            android:layout_width="52dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:text="I dag"
+            app:layout_constraintEnd_toEndOf="@+id/facetoday_image"
+            app:layout_constraintHorizontal_bias="0.441"
+            app:layout_constraintStart_toStartOf="@+id/facetoday_image"
+            app:layout_constraintTop_toBottomOf="@+id/facetoday_image" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/actionbar_image"
@@ -110,22 +140,22 @@
     <ProgressBar
         android:id="@+id/progbar_other"
         style="?android:attr/progressBarStyleHorizontal"
-        android:progress="40"
         android:layout_width="300dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="380dp"
+        android:progress="40"
         app:layout_constraintStart_toEndOf="@+id/other_stickman"
         app:layout_constraintTop_toTopOf="@+id/actionbar_image" />
 
     <ProgressBar
         android:id="@+id/progbar_train"
         style="?android:attr/progressBarStyleHorizontal"
-        android:progress="90"
         android:layout_width="300dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="485dp"
+        android:progress="90"
         app:layout_constraintStart_toEndOf="@+id/training_stickman"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -142,39 +172,39 @@
     <ProgressBar
         android:id="@+id/progbar_bike"
         style="?android:attr/progressBarStyleHorizontal"
-        android:progress="70"
         android:layout_width="300dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="450dp"
+        android:progress="70"
         app:layout_constraintStart_toEndOf="@+id/biking_stickman"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/progbar_stand"
         style="?android:attr/progressBarStyleHorizontal"
-        android:progress="80"
         android:layout_width="300dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="415dp"
+        android:progress="80"
         app:layout_constraintStart_toEndOf="@+id/standing_stickman"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/circlebar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:progress="80"
         android:layout_width="201dp"
         android:layout_height="170dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="184dp"
+        android:progress="80"
+        android:progressDrawable="@drawable/circle_progress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:progressDrawable="@drawable/circle_progress"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/progressBarText"
@@ -192,12 +222,14 @@
         app:layout_constraintTop_toTopOf="@+id/circlebar" />
 
     <HorizontalScrollView
-        android:layout_width="368dp"
-        android:layout_height="116dp"
-        android:layout_marginTop="60dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="320dp"
+        android:layout_height="94dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="48dp"
         android:scrollbars="none"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
