--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="eggwhite">#F3F1F1</color>
+    <color name="warmGrey">#e8e3de</color>
     <color name="eggwhiteShadow">#bfbebe</color>
     <color name="darkEggwhite">#847d78</color>
     <color name="lightBlack">#484848</color>
