--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="darkEggwhite">#847d78</color>
     <color name="lightBlack">#484848</color>
 
+    <color name="colorDarkRed">#9f1717</color>
+
     <!--
     Farvekoder til SENS-appen, defineret af SENS.
     -->
