--- a/app/src/main/res/drawable/opret_patient_knap.xml
+++ b/app/src/main/res/drawable/opret_patient_knap.xml
@@ -5,10 +5,18 @@
 
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
             <corners
-                android:radius="15dp"
+                android:bottomLeftRadius="100dp"
+                android:bottomRightRadius="100dp"
+                android:topLeftRadius="100dp"
+                android:topRightRadius="100dp"
                 />
-            <solid
-                android:color="@color/colorRed"
+            <size
+                android:width="50dp"
+                android:height="50dp"
+                />
+            <gradient
+                android:startColor="@color/colorRed"
+                android:endColor="@color/colorDarkRed"
                 />
             <stroke
                 android:width="2dp"
