--- a/app/src/main/res/layout/patient_list_item.xml
+++ b/app/src/main/res/layout/patient_list_item.xml
@@ -4,15 +4,15 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    
+
     <ImageView
         android:id="@+id/bagground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/patient_list_bar"
-        />
+        android:src="@drawable/patient_list_bar" />
 
     <TextView
         android:id="@+id/name"
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="80dp"
         android:text="Simon Steen Pedersen"
         android:textSize="18sp" />
 
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="22dp"
+        android:layout_marginStart="40dp"
         android:text="1."
         android:textSize="18sp"
         android:textStyle="italic" />
