--- a/app/src/main/res/drawable/logud_knap.xml
+++ b/app/src/main/res/drawable/logud_knap.xml
@@ -3,7 +3,10 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorRed"/>
+            <gradient
+                android:startColor="@color/colorRed"
+                android:endColor="@color/colorDarkRed"
+                />
 
             <stroke android:color="@color/colorBlack"
                 android:width="2dp"/>
